--- a/popup.html
+++ b/popup.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Counter</title>
+    <link rel="stylesheet" href="popup.css">
+    <!-- <script src="https://kit.fontawesome.com/25223b30a9.js" crossorigin="anonymous"></script> -->
 </head>
 
 <body>
-    <h1>Temps passé sur le navigateur :</h1>
-    <p id="counter">0 minutes</p>
+    <div class="popup-container">
+        <h1>Temps passé sur le navigateur :</h1>
+        <p id="counter">0 minutes</p>
+        <button id="reset">Remise à zéro</button>
+
+    </div>
+
     <script src="popup.js"></script>
 </body>
 
