--- a/popup.html
+++ b/popup.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Counter</title>
     <link rel="stylesheet" href="popup.css">
-    <!-- <script src="https://kit.fontawesome.com/25223b30a9.js" crossorigin="anonymous"></script> -->
 </head>
 
 <body>
     <div class="popup-container">
-        <h1>Temps passé sur le navigateur :</h1>
+        <h1>Time spent on browser :</h1>
         <p id="counter">0 minutes</p>
-        <button id="reset">Remise à zéro</button>
+        <button id="reset">Time reset</button>
 
     </div>
 
